--- a/Student-attendance.html
+++ b/Student-attendance.html
@@ -20,6 +20,8 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            background: linear-gradient(#9db6b8, #7b90bf); /* Gradient background */
+
         }
 
         h2 {
