--- a/Student-available-courses.html
+++ b/Student-available-courses.html
@@ -12,15 +12,19 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 20px;
+    background: url("https://th.bing.com/th/id/R.4278079bb07fd2330c9c8256ba1ae169?rik=t37pM1iR%2bEPVwA&riu=http%3a%2f%2fwallpapercave.com%2fwp%2ftU89SSy.jpg&ehk=CYdCzuk0flgpZZm%2blSOWBCfFDIjWrozfvPsacKRoh5Q%3d&risl=&pid=ImgRaw&r=0");
+
 }
 
 .container {
     max-width: 800px;
     margin: 0 auto;
+
 }
 
+
 h2 {
-    color: #333;
+    color: #bebb21;
 }
 
 .course-card {
