--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="form-container">
       <h1 id="main-heading">Student Management Portal</h1>
       <form id="loginForm">
-        <h2 id="login-heading">Login</h2>
+        <h2 id="login-heading">LOGIN</h2>
 
         <div class="container">
           <label class="text">Email</label>
